enterprise: P0 security hardening, P1 perf, P2 infra — full production upgrade
Security (P0):
- Redis: replace LaissezFaireSubTypeValidator with BasicPolymorphicTypeValidator (RCE fix)
- CORS: remove allowedOriginPatterns("*") — inject explicit origins via CORS_ALLOWED_ORIGINS env var
- JWT: @PostConstruct fail-fast validation in JWTGenerator and SecurityConfig (min 64 chars)
- WebSocket: STOMP CONNECT now requires valid Bearer JWT via ChannelInterceptor
- RestTemplate: add 5s connect / 15s read timeout on default bean
- MDC: remove duplicate requestId set in JWTAuthFilter — RequestIdFilter is sole authority

Performance (P1):
- OrderRepository: add findStatusHistoriesByOrderIds batch query (N+1 fix)
- OrderServiceImpl: replace per-order status history loop with batchLoadStatusHistories()
- Hibernate base config: fetch_size=50, order_inserts, order_updates, default_batch_fetch_size=25
- HikariCP prod: cachePrepStmts, prepStmtCacheSize=250, useServerPrepStmts

Architecture / Infra (P2):
- ApiResponse: success:boolean replaces status:String; remove path/method fields; keep deprecated error() shim
- BusinessException: unified exception class replacing 7+ custom types (factory methods per status)
- GlobalExceptionHandler: rewritten — BusinessException handler, no more string-matching RuntimeException
- Flyway: add dependency + V1 baseline + V2 performance indexes (CONCURRENTLY, non-transactional)
- pom.xml: add Flyway, Testcontainers (PostgreSQL); remove H2
- application-prod.yaml: ddl-auto=none (Flyway owns schema); Flyway config block
- Dockerfile: layered JAR extraction, alpine, non-root user (emenu), ZGC +ZGenerational
- docker-compose.prod.yml: full prod stack — DB/Redis ports NOT exposed to host
- .env.example: deployment template with all required env vars documented
- application.yaml: CORS_ALLOWED_ORIGINS env var, Hibernate perf tuning
- logback-spring.xml: ASYNC_JSON prod appender, 10 MDC keys documented, noise suppression
- BaseIntegrationTest + application-t